# bagel

./: .gitignore  AUTHORS  CONTRIBUTING.md  ChangeLog  Makefile.am  NEWS  README  TODO  ar-lib  configure.ac  header.py
src/: Doxyfile  Makefile.am  Makefile.in  bagel.h  benzene_svp_mp2.in  fci.in  global.h  hf_svp_dirac_opt.json  macros.h  main.cc  mol.inp  ne.inp  rename.sh  run_bagel.cc  samp.inp  stackmem.h  static.cc  test_main.cc  test_solvers.cc
src/alglib/: Makefile.am  alglibinternal.cpp  alglibinternal.h  alglibmisc.cpp  alglibmisc.h  ap.cpp  ap.h  dataanalysis.cpp  dataanalysis.h  diffequations.cpp  diffequations.h  fasttransforms.cpp  integration.cpp  integration.h  interpolation.cpp  interpolation.h  linalg.cpp  linalg.h  optimization.cpp  optimization.h  solvers.cpp  solvers.h  specialfunctions.cpp  statistics.cpp
src/asd/: Makefile.am  asd.h  asd_base.cc  asd_base.h  asd_base_rdm.cc  asd_cas.cc  asd_cas.h  asd_compute.hpp  asd_compute_diagonal.hpp  asd_compute_offdiagonal.hpp  asd_compute_rdm.cc  asd_compute_rdm.hpp  asd_diagonalize.cc  asd_distcas.cc  asd_distcas.h  asd_distras.cc  asd_distras.h  asd_gamma_coupling.hpp  asd_init.hpp  asd_modelize.cc  asd_monomer_rdm.hpp  asd_nevpt2.cc  asd_nevpt2.h  asd_nevpt2_mat.cc  asd_nevpt2_rdm.cc  asd_ras.cc  asd_ras.h  asd_rdm.cc  asd_rdm.hpp  asd_rdm12.cc  asd_rdm3.cc  asd_rdm4.cc  asd_spin.cc  asd_spin.h  asd_spin_coupling.hpp  construct_asd.cc  construct_asd.h  coupling.cc  coupling.h  dimersubspace.h  (+12 more)
src/asd_dmrg/: Makefile.am  asd_dmrg.cc  asd_dmrg.h  asd_dmrg_compute.cc  block_key.h  block_operators.cc  block_operators.h  block_ops_1.cc  block_ops_2.cc  dmrg_block.cc  dmrg_block.h  form_sigma.cc  form_sigma.h  form_sigma_ci.cc  gamma_forest_asd.h  gamma_forest_prod_asd.cc  gamma_forest_prod_asd.h  kronecker.cc  kronecker.h  phi_ijk_lists.cc  phi_ijk_lists.h  phi_k_lists.cc  phi_k_lists.h  product_citask.h  product_civec.cc  product_civec.h  product_denom.cc  product_guess.cc  product_modelci.cc  product_modelci.h  product_rasci.cc  product_rasci.h  rasd.cc  rasd.h  test_asd_dmrg.cc
src/asdscf/: Makefile.am  asdrotfile2.h  asdscf.cc  asdscf.h  asdscf2.cc  asdscf2.h  bfgs.h  bfgs2.cc  bfgs2.h  bfgs2_grad.cc  hybrid.cc  superci.cc  superci.h  superci_sigma.cc  supercimicro.cc  supercimicro.h
src/basis/: 3-21g.basis  3-21g.json  6-31++gd.basis  6-31g.basis  6-31g.json  6-31gd.basis  6-31gdp.basis  Makefile.am  ano-rcc.json  ano-rcc_unc.json  aug-cc-pcv5z.json  aug-cc-pcvdz-dk.json  aug-cc-pcvdz.json  aug-cc-pcvqz-dk.json  aug-cc-pcvqz.json  aug-cc-pcvtz-dk.json  aug-cc-pcvtz.json  aug-cc-pv5z-jkfit.json  aug-cc-pv5z.basis  aug-cc-pv5z.json  aug-cc-pv6z.basis  aug-cc-pv6z.json  aug-cc-pvdz-cabs.basis  aug-cc-pvdz-jkfit.json  aug-cc-pvdz.basis  aug-cc-pvdz.json  aug-cc-pvqz-jkfit.json  aug-cc-pvqz.basis  aug-cc-pvqz.json  aug-cc-pvtz-cabs.basis  aug-cc-pvtz-jkfit.json  aug-cc-pvtz.basis  aug-cc-pvtz.json  aug-cc-pwcv5z.json  aug-cc-pwcvdz.json  aug-cc-pwcvqz.json  aug-cc-pwcvtz.json  aug-pv7z.json  cc-pcv5z.json  cc-pcvdz.json  (+74 more)
src/casscf/: Makefile.am  Makefile.in  casbfgs.cc  casbfgs.h  cashybrid.cc  cashybrid.h  casscf.cc  casscf.h  f77.h  jkop.h  jvec.cc  jvec.h  qvec.cc  qvec.h  rotfile.cc  rotfile.h  superci.cc  superci.h  superci_sigma.cc  supercigrad.cc  supercigrad.h  supercimicro.cc  supercimicro.h  test_casscf.cc  werner.cc  werner.h  werner4.cc  werner4.h  werner_compute.cc
src/ci/: Makefile.am
src/ciutil/: Makefile.am  bitutil.h  ciblock.h  cistring.cc  cistring.h  cistringmap.h  cistringset.cc  cistringset.h  cistringspace.h  citraits.h  determinants_base.cc  determinants_base.h  stringspace.cc  stringspace.h
src/df/: Makefile.am  Makefile.in  breit2index.cc  breit2index.h  complexdf.cc  complexdf.h  complexdf_base.cc  complexdf_base.h  complexdfinttask.h  complexparalleldf.cc  complexparalleldf.h  df.cc  df.h  df_london.cc  df_london.h  dfblock.cc  dfblock.h  dfblock_base.cc  dfblock_base.h  dfblock_london.cc  dfblock_london.h  dfblockt.cc  dfblockt.h  dfdist.cc  dfdist.h  dfdistt.cc  dfdistt.h  dfdistt_london.cc  dfdistt_london.h  dfinttask.cc  dfinttask.h  dfinttask_london.cc  dfinttask_london.h  dfinttask_old.h  fit.cc  fit.h  paralleldf.cc  paralleldf.h  paralleldf_impl.hpp  paralleldf_london.cc  (+12 more)
src/dimer/: Makefile.am  dimer.cc  dimer.h  dimer_cispace.cc  dimer_cispace.h  dimer_compute_cispaces.cc  dimer_hamiltonian.cc  dimer_jop.cc  dimer_jop.h  dimer_levelshift.cc  dimer_levelshift.h  dimer_prop.h  dimer_scf.cc  dimer_scf.h  dimer_sigma.cc
src/dkh/: Makefile.am  dkhcore.cc  dkhcore.h
src/fci/: Makefile.am  Makefile.in  cispin.cc  citask.h  civec.cc  civec.h  comb.h  determinants.cc  determinants.h  dist_form_sigma.cc  dist_form_sigma.h  distcivec.cc  distfci.cc  distfci.h  distfci_ab.h  distfci_bb.h  distfci_compute.cc  dvec.cc  dvec.h  f77.h  fci.cc  fci.h  fci_compute.cc  fci_init.cc  fci_rdm.cc  fciblock.cc  fciblock.h  harrison.h  harrison_compute.cc  harrison_denom.cc  hzdenomtask.h  hztasks.h  knowles.h  knowles_compute.cc  knowles_denom.cc  macros.h  modelci.cc  modelci.h  mofile.cc  mofile.h  (+10 more)
src/grad/: Makefile.am  _gvrr_0000.cc  _gvrr_0010.cc  _gvrr_0020.cc  _gvrr_0030.cc  _gvrr_0040.cc  _gvrr_0050.cc  _gvrr_0060.cc  _gvrr_0070.cc  _gvrr_0080.cc  _gvrr_0090.cc  _gvrr_00a0.cc  _gvrr_00b0.cc  _gvrr_00c0.cc  _gvrr_00d0.cc  _gvrr_1000.cc  _gvrr_1010.cc  _gvrr_1020.cc  _gvrr_1030.cc  _gvrr_1040.cc  _gvrr_1050.cc  _gvrr_1060.cc  _gvrr_1070.cc  _gvrr_1080.cc  _gvrr_1090.cc  _gvrr_10a0.cc  _gvrr_10b0.cc  _gvrr_10c0.cc  _gvrr_10d0.cc  _gvrr_2000.cc  _gvrr_2010.cc  _gvrr_2020.cc  _gvrr_2030.cc  _gvrr_2040.cc  _gvrr_2050.cc  _gvrr_2060.cc  _gvrr_2070.cc  _gvrr_2080.cc  _gvrr_2090.cc  _gvrr_20a0.cc  (+200 more)
src/input/: Makefile.am  input.cc  input.h  parse.cc  parse.h
src/integral/: Makefile.am  _carsph_00.cc  _carsph_10.cc  _carsph_11.cc  _carsph_20.cc  _carsph_21.cc  _carsph_22.cc  _carsph_30.cc  _carsph_31.cc  _carsph_32.cc  _carsph_33.cc  _carsph_40.cc  _carsph_41.cc  _carsph_42.cc  _carsph_43.cc  _carsph_44.cc  _carsph_50.cc  _carsph_51.cc  _carsph_52.cc  _carsph_53.cc  _carsph_54.cc  (+61 more)
(+5278 files in other folders)
