lib_LTLIBRARIES = libbagel_alglib.la
libbagel_alglib_la_SOURCES = statistics.cpp specialfunctions.cpp solvers.cpp optimization.cpp linalg.cpp interpolation.cpp integration.cpp fasttransforms.cpp diffequations.cpp dataanalysis.cpp ap.cpp alglibmisc.cpp alglibinternal.cpp
AM_CXXFLAGS=-I$(top_srcdir)

