lib_LTLIBRARIES = libbagel_asd.la
libbagel_asd_la_SOURCES = asd_base.cc asd_cas.cc asd_distcas.cc asd_ras.cc asd_distras.cc asd_spin.cc gamma_forest.cc construct_asd.cc asd_diagonalize.cc asd_modelize.cc \
                          asd_compute_rdm.cc gamma_tensor.cc coupling.cc
AM_CXXFLAGS=-I$(top_srcdir)
