SUBDIRS = dmrg dimer multisite orbital
noinst_LTLIBRARIES = libbagel_asd.la
libbagel_asd_la_SOURCES = asd_base.cc asd_rdm.cc asd_spin.cc gamma_forest.cc gamma_tree.cc gamma_task.cc construct_asd.cc asd_diagonalize.cc asd_modelize.cc \
                          asd_cas.cc asd_ras.cc gamma_tensor.cc coupling.cc
AM_CXXFLAGS=-I$(top_srcdir)
