lib_LTLIBRARIES = libbagel_asdscf.la
libbagel_asdscf_la_SOURCES = asdscf.cc \
                             superci.cc superci_sigma.cc supercimicro.cc \
                             bfgs.cc \
                             hybrid.cc #qvec.cc supercigrad.cc casbfgs.cc cashybrid.cc
AM_CXXFLAGS=-I$(top_srcdir)
