data_DATA = 3-21g.json aug-cc-pvtz.json cc-pv6z.json cc-pvqz-jkfit.json cc-pvtz-ri.json tzvpp-jkfit.json \
cc-pv5z-jkfit.json cc-pvdz-jkfit.json cc-pvqz-ri.json cc-pvtz.json sto-3g.json tzvpp.json \
aug-cc-pvdz.json cc-pv5z-ri.json cc-pvdz-ri.json cc-pvqz.json qzvpp-jkfit.json svp-jkfit.json \
aug-cc-pvqz.json cc-pv5z.json cc-pvdz.json cc-pvtz-jkfit.json qzvpp.json svp.json \
ano-rcc.json ano-rcc_unc.json
