data_DATA = 3-21g.json 6-31g.json ano-rcc.json aug-cc-pv5z.json aug-cc-pv6z.json aug-cc-pvdz.json aug-cc-pvqz.json \
aug-cc-pvtz.json cc-pv5z-jkfit.json cc-pv5z-ri.json cc-pv5z.json cc-pv6z.json cc-pvdz-jkfit.json cc-pvdz-ri.json \
cc-pvdz.json cc-pvqz-jkfit.json cc-pvqz-ri.json cc-pvqz.json cc-pvtz-jkfit.json cc-pvtz-ri.json cc-pvtz.json \
complete.json def2-SVP-2c-ecp.json def2-SVP-ecp.json ecp10mdf.json ecp28mdf.json ecp46mdf.json ecp60mdf.json \
ecp78mdf.json lanl2dz-ecp.json qzvpp-jkfit.json qzvpp.json sto-3g.json svp-jkfit.json svp.json tzvpp-jkfit.json \
tzvpp.json aug-cc-pcv5z.json aug-cc-pcvqz.json aug-cc-pwcvdz.json cc-pcv5z.json cc-pvdz-dk.json d-aug-cc-pvqz.json \
aug-cc-pcvdz-dk.json aug-cc-pcvtz-dk.json aug-cc-pwcvqz.json cc-pcvdz.json cc-pvtz-dk.json d-aug-cc-pvtz.json \
aug-cc-pcvdz.json aug-cc-pcvtz.json aug-cc-pwcvtz.json cc-pcvqz.json d-aug-cc-pv5z.json aug-cc-pcvqz-dk.json \
aug-cc-pwcv5z.json cc-pcvtz.json d-aug-cc-pvdz.json

