AUTOMAKE_OPTIONS = subdir-objects
lib_LTLIBRARIES = libbagel_integral.la
libbagel_integral_la_SOURCES = hrrlist.cc carsphlist.cc sort.cc sort_sph.cc csort.cc csort_sph.cc sortlist.cc \
_hrr_20_11.cc _hrr_40_31.cc _hrr_60_33.cc _hrr_70_43.cc _hrr_80_44.cc _hrr_90_54.cc _hrr_a0_64.cc _hrr_30_21.cc _hrr_50_32.cc _hrr_60_42.cc _hrr_70_52.cc _hrr_80_53.cc _hrr_90_63.cc _hrr_b0_65.cc _hrr_40_22.cc _hrr_50_41.cc _hrr_60_51.cc _hrr_70_61.cc _hrr_80_62.cc _hrr_a0_55.cc _hrr_c0_66.cc \
_carsph_00.cc _carsph_10.cc _carsph_20.cc _carsph_30.cc _carsph_40.cc _carsph_50.cc _carsph_60.cc _carsph_11.cc _carsph_21.cc _carsph_31.cc _carsph_41.cc _carsph_51.cc _carsph_61.cc _carsph_22.cc _carsph_32.cc _carsph_42.cc _carsph_52.cc _carsph_62.cc _carsph_33.cc _carsph_43.cc _carsph_53.cc _carsph_63.cc _carsph_44.cc _carsph_54.cc _carsph_64.cc _carsph_55.cc _carsph_65.cc _carsph_66.cc \
rys/vrr.cc rys/gvrr.cc rys/bvrr.cc rys/svrr.cc rys/usvrr.cc rys/s2vrr.cc comprys/cvrr.cc\
rys/_eriroot_1.cc rys/_eriroot_2.cc rys/_eriroot_3.cc rys/_eriroot_4.cc rys/_eriroot_5.cc rys/_eriroot_6.cc rys/_eriroot_7.cc rys/_eriroot_8.cc rys/_eriroot_9.cc rys/_eriroot_10.cc rys/_eriroot_11.cc rys/_eriroot_12.cc rys/_eriroot_13.cc \
rys/_r2root_1.cc rys/_r2root_2.cc rys/_r2root_3.cc rys/_r2root_4.cc rys/_r2root_5.cc rys/_r2root_6.cc rys/_r2root_7.cc rys/_r2root_8.cc rys/_r2root_9.cc rys/_r2root_10.cc rys/_r2root_11.cc rys/_r2root_12.cc rys/_r2root_13.cc \
comprys/_complex_eriroot_1.cc comprys/_complex_eriroot_2.cc comprys/_complex_eriroot_3.cc comprys/_complex_eriroot_4.cc comprys/_complex_eriroot_5.cc comprys/_complex_eriroot_6.cc comprys/_complex_eriroot_7.cc comprys/_complex_eriroot_8.cc comprys/_complex_eriroot_9.cc comprys/_complex_eriroot_10.cc comprys/_complex_eriroot_11.cc comprys/_complex_eriroot_12.cc comprys/_complex_eriroot_13.cc \
rys/_breitroot_1.cc rys/_breitroot_2.cc rys/_breitroot_3.cc rys/_breitroot_4.cc rys/_breitroot_5.cc rys/_breitroot_6.cc rys/_breitroot_7.cc rys/_breitroot_8.cc rys/_breitroot_9.cc rys/_breitroot_10.cc rys/_breitroot_11.cc rys/_breitroot_12.cc rys/_breitroot_13.cc \
rys/_spin2root_1.cc rys/_spin2root_2.cc rys/_spin2root_3.cc rys/_spin2root_4.cc rys/_spin2root_5.cc rys/_spin2root_6.cc rys/_spin2root_7.cc rys/_spin2root_8.cc rys/_spin2root_9.cc rys/_spin2root_10.cc rys/_spin2root_11.cc rys/_spin2root_12.cc rys/_spin2root_13.cc \
comprys/complexeribatch.cc rys/eribatch.cc rys/gradbatch.cc rys/gnaibatch.cc rys/slaterbatch.cc rys/breitbatch.cc \
rys/compute.cc comprys/ccompute.cc rys/bcompute.cc rys/gcompute.cc rys/gncompute.cc rys/scompute.cc rys/vrr_optim.cc rys/bvrr_optim.cc rys/svrr_optim.cc rys/usvrr_optim.cc \
rys/naibatch.cc rys/r0batch.cc rys/r1batch.cc rys/r2batch.cc \
rys/smalleribatch.cc rys/mixederibatch.cc rys/gsmallnaibatch.cc rys/gsmalleribatch.cc \
os/osint.cc os/oscontraction.cc os/overlapbatch.cc os/ovrr.cc os/kineticbatch.cc os/mmbatch.cc os/momentumbatch.cc os/gocompute.cc os/gkcompute.cc os/gmcompute.cc \
libint/libint.cc libint/glibint.cc
libbagel_integral_la_LIBADD = ../util/libbagel_util.la ../parallel/libbagel_parallel.la ../math/libbagel_math.la ../molecule/libbagel_molecule.la
AM_CXXFLAGS=-I$(top_srcdir)
