AUTOMAKE_OPTIONS = subdir-objects
noinst_LTLIBRARIES = libbagel_integral.la
libbagel_integral_la_SOURCES = hrrlist.cc carsphlist.cc sort.cc sort_sph.cc csort.cc csort_sph.cc sortlist.cc \
_hrr_20_11.cc _hrr_40_31.cc _hrr_60_33.cc _hrr_70_43.cc _hrr_80_44.cc _hrr_90_54.cc _hrr_a0_64.cc _hrr_30_21.cc _hrr_50_32.cc _hrr_60_42.cc _hrr_70_52.cc _hrr_80_53.cc _hrr_90_63.cc _hrr_b0_65.cc _hrr_40_22.cc _hrr_50_41.cc _hrr_60_51.cc _hrr_70_61.cc _hrr_80_62.cc _hrr_a0_55.cc _hrr_c0_66.cc _hrr_80_71.cc _hrr_90_72.cc _hrr_a0_73.cc _hrr_b0_74.cc _hrr_c0_75.cc _hrr_d0_76.cc _hrr_e0_77.cc \
_carsph_00.cc _carsph_10.cc _carsph_20.cc _carsph_30.cc _carsph_40.cc _carsph_50.cc _carsph_60.cc _carsph_70.cc _carsph_11.cc _carsph_21.cc _carsph_31.cc _carsph_41.cc _carsph_51.cc _carsph_61.cc _carsph_71.cc _carsph_22.cc _carsph_32.cc _carsph_42.cc _carsph_52.cc _carsph_62.cc _carsph_72.cc _carsph_33.cc _carsph_43.cc _carsph_53.cc _carsph_63.cc _carsph_73.cc _carsph_44.cc _carsph_54.cc _carsph_64.cc _carsph_74.cc _carsph_55.cc _carsph_65.cc _carsph_75.cc _carsph_66.cc _carsph_76.cc _carsph_77.cc \
rys/vrr.cc rys/gvrr.cc rys/bvrr.cc rys/svrr.cc rys/usvrr.cc rys/s2vrr.cc comprys/cvrr.cc \
rys/_eriroot_1.cc rys/_eriroot_2.cc rys/_eriroot_3.cc rys/_eriroot_4.cc rys/_eriroot_5.cc rys/_eriroot_6.cc rys/_eriroot_7.cc rys/_eriroot_8.cc rys/_eriroot_9.cc rys/_eriroot_10.cc rys/_eriroot_11.cc rys/_eriroot_12.cc rys/_eriroot_13.cc rys/_eriroot_14.cc rys/_eriroot_15.cc rys/_eriroot_16.cc rys/_eriroot_17.cc rys/_eriroot_18.cc rys/_eriroot_19.cc rys/_eriroot_20.cc rys/_eriroot_21.cc rys/_eriroot_22.cc rys/_eriroot_23.cc rys/_eriroot_24.cc rys/_eriroot_25.cc rys/_eriroot_26.cc rys/_eriroot_27.cc rys/_eriroot_28.cc rys/_eriroot_29.cc rys/_eriroot_30.cc rys/_eriroot_31.cc rys/_eriroot_32.cc rys/_eriroot_33.cc rys/_eriroot_34.cc rys/_eriroot_35.cc rys/_eriroot_36.cc rys/_eriroot_37.cc rys/_eriroot_38.cc rys/_eriroot_39.cc rys/_eriroot_40.cc rys/_eriroot_41.cc rys/_eriroot_42.cc rys/_eriroot_43.cc rys/_eriroot_44.cc rys/_eriroot_45.cc rys/_eriroot_46.cc rys/_eriroot_47.cc rys/_eriroot_48.cc rys/_eriroot_49.cc rys/_eriroot_50.cc \
rys/_r2root_1.cc rys/_r2root_2.cc rys/_r2root_3.cc rys/_r2root_4.cc rys/_r2root_5.cc rys/_r2root_6.cc rys/_r2root_7.cc rys/_r2root_8.cc rys/_r2root_9.cc rys/_r2root_10.cc rys/_r2root_11.cc rys/_r2root_12.cc rys/_r2root_13.cc \
comprys/_complex_eriroot_1.cc comprys/_complex_eriroot_2.cc comprys/_complex_eriroot_3.cc comprys/_complex_eriroot_4.cc comprys/_complex_eriroot_5.cc comprys/_complex_eriroot_6.cc comprys/_complex_eriroot_7.cc comprys/_complex_eriroot_8.cc comprys/_complex_eriroot_9.cc comprys/_complex_eriroot_10.cc comprys/_complex_eriroot_11.cc comprys/_complex_eriroot_12.cc comprys/_complex_eriroot_13.cc \
rys/_breitroot_1.cc rys/_breitroot_2.cc rys/_breitroot_3.cc rys/_breitroot_4.cc rys/_breitroot_5.cc rys/_breitroot_6.cc rys/_breitroot_7.cc rys/_breitroot_8.cc rys/_breitroot_9.cc rys/_breitroot_10.cc rys/_breitroot_11.cc rys/_breitroot_12.cc rys/_breitroot_13.cc \
rys/_spin2root_1.cc rys/_spin2root_2.cc rys/_spin2root_3.cc rys/_spin2root_4.cc rys/_spin2root_5.cc rys/_spin2root_6.cc rys/_spin2root_7.cc rys/_spin2root_8.cc rys/_spin2root_9.cc rys/_spin2root_10.cc rys/_spin2root_11.cc rys/_spin2root_12.cc rys/_spin2root_13.cc \
compos/complexoverlapbatch.cc compos/covrr.cc compos/complexkineticbatch.cc compos/complexmomentumbatch.cc compos/complexangmombatch.cc \
compos/point_complexmomentumbatch.cc compos/point_complexoverlapbatch.cc os/point_overlapbatch.cc \
comprys/complexeribatch.cc rys/eribatch.cc rys/gradbatch.cc rys/gnaibatch.cc rys/slaterbatch.cc rys/breitbatch.cc rys/rysintegral.cc rys/coulombbatch_base.cc rys/coulombbatch_energy.cc \
rys/compute.cc comprys/ccompute.cc rys/bcompute.cc rys/gcompute.cc rys/gncompute.cc rys/scompute.cc rys/vrr_optim.cc rys/bvrr_optim.cc rys/svrr_optim.cc rys/usvrr_optim.cc \
rys/naibatch.cc rys/spindipolebatch.cc comprys/complexnaibatch.cc rys/r0batch.cc rys/r1batch.cc rys/r2batch.cc rys/eribatch_base.cc \
rys/smalleribatch.cc rys/mixederibatch.cc rys/gsmallnaibatch.cc rys/gsmalleribatch.cc \
comprys/complexsmalleribatch.cc comprys/complexmixederibatch.cc \
os/overlapbatch.cc os/ovrr.cc os/kineticbatch.cc os/mmbatch.cc os/momentumbatch.cc os/gocompute.cc os/gkcompute.cc os/gmcompute.cc os/osintegral.cc os/angmombatch.cc \
os/multipolebatch_base.cc os/multipolebatch.cc \
libint/libint.cc libint/glibint.cc \
ecp/angularbatch.cc ecp/ecpbatch.cc ecp/radial.cc ecp/soangularbatch.cc ecp/soecpbatch.cc \
ecp/_sphusp_0.cc ecp/_sphusp_1.cc ecp/_sphusp_2.cc ecp/_sphusp_3.cc ecp/_sphusp_4.cc ecp/_sphusp_5.cc ecp/_sphusp_6.cc ecp/_sphusp_7.cc ecp/_sphusp_8.cc ecp/_sphusp_9.cc ecp/_sphusp_10.cc
AM_CXXFLAGS=-I$(top_srcdir)
