lib_LTLIBRARIES = libbagel_london.la
libbagel_london_la_SOURCES = scf_london.cc dirac_london.cc fci_london.cc debug_london.cc fock_london.cc scf_base_london.cc fock_base_london.cc zcoeff.cc \
dfock_london.cc reldf_london.cc reldfhalf_london.cc cdmatrix_london.cc relhcore_london.cc reloverlap_london.cc small1e_london.cc
AM_CXXFLAGS=-I$(top_srcdir)
