AUTOMAKE_OPTIONS = subdir-objects
noinst_LTLIBRARIES = libbagel_mat1e.la
libbagel_mat1e_la_SOURCES = matrix1e.cc kinetic.cc nai.cc overlap.cc hcore.cc dkhcore.cc dipolematrix.cc sohcore.cc fermicontact.cc spindipole.cc angmom.cc cap.cc \
giao/zhcore.cc giao/zkinetic.cc giao/zoverlap.cc giao/relhcore_london.cc giao/reloverlap_london.cc giao/small1e_london.cc giao/angmom_london.cc \
rel/reloverlap.cc rel/relhcore.cc rel/breitint.cc rel/reldipole.cc rel/small1e.cc rel/spinint.cc
AM_CXXFLAGS=-I$(top_srcdir)
