lib_LTLIBRARIES = libbagel_math.la
libbagel_math_la_SOURCES = quatern.cc matrix_base.cc matrix.cc zmatrix.cc distmatrix.cc distzmatrix.cc csymmatrix.cc jacobi.cc transpose.cc ztranspose.cc sparsematrix.cc blocksparsematrix.cc xyzfile.cc algo.cc zquatev.cc btas_interface.cc preallocarray.cc
libbagel_math_la_LIBADD = ../parallel/libbagel_parallel.la ../util/libbagel_util.la
AM_CXXFLAGS=-I$(top_srcdir)
