lib_LTLIBRARIES = libbagel_molecule.la
libbagel_molecule_la_SOURCES = localization.cc atom.cc shell.cc petite.cc matrix1e.cc kinetic.cc overlap.cc hcore.cc dipolematrix.cc molecule.cc
libbagel_molecule_la_LIBADD = ../util/libbagel_util.la ../parallel/libbagel_parallel.la ../math/libbagel_math.la ../input/libbagel_input.la #../integral/libbagel_integral.la
AM_CXXFLAGS=-I$(top_srcdir)
