lib_LTLIBRARIES = libbagel_molecule.la
libbagel_molecule_la_SOURCES = atom.cc shell_base.cc shell.cc petite.cc shellecp.cc ecp.cc molecule.cc moment_compute.cc shellpair.cc
libbagel_molecule_la_LIBADD = ../util/libbagel_util.la ../util/parallel/libbagel_parallel.la ../util/math/libbagel_math.la ../util/input/libbagel_input.la
AM_CXXFLAGS=-I$(top_srcdir)
