lib_LTLIBRARIES = libbagel_periodic.la
libbagel_periodic_la_SOURCES = pscf_base.cc pscf.cc lattice.cc pdata.cc pmatrix1e.cc phcore.cc pfock.cc poverlap.cc pcoeff.cc \
pdfdist_ints.cc pdfdist.cc pjop.cc sphmultipole.cc multipolebatch.cc multipolebatch_base.cc localexpansion.cc pmultipole.cc pfmm.cc \
jexpansion.cc tree.cc node.cc simulationcell.cc node_sp.cc tree_sp.cc
AM_CXXFLAGS=-I$(top_srcdir)
