AUTOMAKE_OPTIONS = subdir-objects
noinst_LTLIBRARIES = libbagel_prop.la
libbagel_prop_la_SOURCES = multipole.cc hyperfine.cc momentum.cc momentum_london.cc momentum_point.cc current.cc overlap_point.cc moprint.cc sphmultipole.cc \
						   pseudospin/stevensop.cc pseudospin/pseudospin.cc
AM_CXXFLAGS=-I$(top_srcdir)

