lib_LTLIBRARIES = libbagel_rysint.la
libbagel_rysint_la_SOURCES = module.f90 vrr.cc gvrr.cc bvrr.cc svrr.cc usvrr.cc s2vrr.cc \
_hrr_20_11.cc  _hrr_40_31.cc  _hrr_60_33.cc  _hrr_70_43.cc  _hrr_80_44.cc  _hrr_90_54.cc  _hrr_a0_64.cc _hrr_30_21.cc  _hrr_50_32.cc  _hrr_60_42.cc  _hrr_70_52.cc  _hrr_80_53.cc  _hrr_90_63.cc  _hrr_b0_65.cc _hrr_40_22.cc  _hrr_50_41.cc  _hrr_60_51.cc  _hrr_70_61.cc  _hrr_80_62.cc  _hrr_a0_55.cc  _hrr_c0_66.cc \
_carsph_00.cc _carsph_10.cc _carsph_20.cc _carsph_30.cc _carsph_40.cc _carsph_50.cc _carsph_60.cc _carsph_11.cc _carsph_21.cc _carsph_31.cc _carsph_41.cc _carsph_51.cc _carsph_61.cc _carsph_22.cc _carsph_32.cc _carsph_42.cc _carsph_52.cc _carsph_62.cc _carsph_33.cc _carsph_43.cc _carsph_53.cc _carsph_63.cc _carsph_44.cc _carsph_54.cc _carsph_64.cc _carsph_55.cc _carsph_65.cc _carsph_66.cc \
root1.f90 root2.f90 root3.f90 root4.f90 root5.f90 root6.f90 root7.f90 root8.f90 root9.f90 root10.f90 root11.f90 root12.f90 root13.f90 \
_eriroot_1.f _eriroot_2.f _eriroot_3.f _eriroot_4.f _eriroot_5.f _eriroot_6.f _eriroot_7.f _eriroot_8.f _eriroot_9.f _eriroot_10.f _eriroot_11.f _eriroot_12.f _eriroot_13.f \
_breitroot_1.cc _breitroot_2.cc _breitroot_3.cc _breitroot_4.cc _breitroot_5.cc _breitroot_6.cc _breitroot_7.cc _breitroot_8.cc _breitroot_9.cc _breitroot_10.cc _breitroot_11.cc _breitroot_12.cc _breitroot_13.cc \
_spin2root_1.f _spin2root_2.f _spin2root_3.f _spin2root_4.f _spin2root_5.f _spin2root_6.f _spin2root_7.f _spin2root_8.f _spin2root_9.f _spin2root_10.f _spin2root_11.f _spin2root_12.f _spin2root_13.f \
rysint.cc eribatch_base.cc naibatch_base.cc eribatch.cc gradbatch.cc gnaibatch.cc slaterbatch.cc \
compute.cc bcompute.cc gcompute.cc ncompute.cc gncompute.cc scompute.cc contraction.cc vrr_optim.cc bvrr_optim.cc sort.cc srootlist.cc svrr_optim.cc usvrr_optim.cc \
rys.f hrrlist.cc sortlist.cc start_up_slater.f90 \
carsphlist.cc sort_sph.cc \
smalleribatch.cc smallnaibatch.cc mixederibatch.cc\
libint.cc glibint.cc
AM_CXXFLAGS=-I$(top_srcdir)
