AUTOMAKE_OPTIONS = subdir-objects
noinst_LTLIBRARIES = libbagel_scf.la
libbagel_scf_la_SOURCES = scf_base.cc atomicdensities.cc slater2e.cc hf/rhf.cc hf/fock_base.cc hf/fock.cc hf/uhf.cc hf/rohf.cc \
sohf/soscf.cc sohf/sofock.cc ks/dftgrid.cc ks/grid.cc ks/ks.cc ks/lebedev.cc dhf/dirac.cc dhf/dfock.cc dhf/diracgrad.cc \
giaohf/fock_london.cc giaohf/rhf_london.cc \
fmm/fmm.cc fmm/box.cc
AM_CXXFLAGS=-I$(top_srcdir)
