lib_LTLIBRARIES = libslater.la
libslater_la_SOURCES = module.f90 slaterbatch.cc srootlist.cc scompute.cc svrr.cc usvrr.cc svrr_optim.cc usvrr_optim.cc \
start_up_slater.f90 root1.f90 root2.f90 root3.f90 root4.f90 root5.f90 root6.f90 root7.f90 root8.f90 root9.f90 root10.f90 root11.f90 root12.f90 root13.f90
AM_CXXFLAGS=-I$(top_srcdir)
